--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "date-diff": "^1.0.2",
+    "emoji-picker-react": "^4.4.9",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "fs": "0.0.1-security",
+    "imagekit": "^4.1.3",
+    "millify": "^6.1.0",
     "mongoose": "^7.1.1",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
@@ -21,7 +25,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-image-crop": "^10.1.4",
     "recoil": "^0.7.7",
+    "socket.io-client": "^4.6.1",
+    "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.3.2",
     "twitter-api-v2": "^1.14.2"
   }
