--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "fs": "0.0.1-security",
+    "gif-picker-react": "^1.3.0",
     "imagekit": "^4.1.3",
     "millify": "^6.1.0",
     "mongoose": "^7.1.1",
