--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "date-diff": "^1.0.2",
     "emoji-picker-react": "^4.4.9",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "framer-motion": "^10.13.0",
     "fs": "0.0.1-security",
     "gif-picker-react": "^1.3.0",
     "imagekit": "^4.1.3",
@@ -22,8 +26,10 @@
     "mongoose": "^7.1.1",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
+    "peerjs": "^1.4.7",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-camera-pro": "^1.3.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-image-crop": "^10.1.4",
