--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "socket.io-client": "^4.6.1",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.3.2",
-    "twitter-api-v2": "^1.14.2"
+    "twitter-api-v2": "^1.14.2",
+    "use-sound": "^4.0.1"
   }
 }
