--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^7.1.1",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
+    "peer": "^1.0.0",
     "peerjs": "^1.4.7",
     "postcss": "8.4.23",
     "react": "18.2.0",
