--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-image-crop": "^10.1.4",
+    "react-player": "^2.12.0",
     "recoil": "^0.7.7",
     "socket.io-client": "^4.6.1",
     "tailwind-scrollbar": "^3.0.4",
