--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tanem/react-nprogress": "^5.0.45",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "date-diff": "^1.0.2",
@@ -43,6 +44,7 @@
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.3.2",
     "twitter-api-v2": "^1.14.2",
-    "use-sound": "^4.0.1"
+    "use-sound": "^4.0.1",
+    "zustand": "^4.3.9"
   }
 }
