--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "peerjs": "^1.4.7",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-image-crop": "^10.1.4",
